# mp2-2025-lab4-polinoms

./: .gitignore  CMakeLists.txt
include/: Polinoms.h
src/: Polinoms.cpp  main.cpp
test/: CMakeLists.txt  test_main.cpp
